# ATI-Netbox-Interface

./: CMakeLists.txt  README.md  vcpkg.json
netbox_demo/: CMakeLists.txt  imgui.cpp  main.cpp
netbox_interface/: CMakeLists.txt
netbox_interface/include/sensor_interface/: netboxrdtclient.h  sensorcontroller.h
netbox_interface/src/: netboxrdtclient.cpp  sensorcontroller.cpp
